--- a/customer-secure-api/template.yaml
+++ b/customer-secure-api/template.yaml
@@ -69,7 +69,9 @@ Resources:
         SecretStringTemplate: '{}'
         GenerateStringKey: 'admin_api_key'
         PasswordLength: 32
-        ExcludeCharacters: '"@/\'
+        RequireEachIncludedType: false
+        IncludeSpace: false
+        ExcludeCharacters: '"@/\~`!#$%^&*()_+-={}[]|:;<>?,./'
 
   # Lambda Functions
   AuthFunction:
@@ -131,14 +133,7 @@ Resources:
             Method: get
             Auth:
               Authorizer: CustomAuthorizer
-        PostData:
-          Type: Api
-          Properties:
-            RestApiId: !Ref ApiGateway
-            Path: /data
-            Method: post
-            Auth:
-              Authorizer: CustomAuthorizer
+
 
   KeyManagerFunction:
     Type: AWS::Serverless::Function
@@ -171,6 +166,32 @@ Resources:
             RestApiId: !Ref ApiGateway
             Path: /admin/keys/{keyId}
             Method: delete
+
+  AdminDataFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub "${AWS::StackName}-admin-data"
+      CodeUri: src/admin-data/
+      Handler: app.lambda_handler
+      Environment:
+        Variables:
+          CUSTOMER_DATA_TABLE: !Ref CustomerDataTable
+          ADMIN_API_KEY_SECRET: !Ref AdminApiKeySecret
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref CustomerDataTable
+        - Statement:
+            Effect: Allow
+            Action:
+              - secretsmanager:GetSecretValue
+            Resource: !Ref AdminApiKeySecret
+      Events:
+        UpsertData:
+          Type: Api
+          Properties:
+            RestApiId: !Ref ApiGateway
+            Path: /admin/upsert
+            Method: put
 
 
 
